fix(YALB-1594): let citations buttons wrap on mobile

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/components/Answer/Answer.module.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/components/Answer/Answer.module.css
@@ -72,7 +72,7 @@
 
 .answerHeader {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-items: center;
     width: 100%;
     height: auto;
@@ -81,6 +81,12 @@
     padding-bottom: 1.5rem;
     margin-bottom: 1.8rem;
     gap:0.5rem;
+}
+
+@media screen and (min-width:800px) {
+    .answerHeader {
+        flex-wrap: nowrap;
+    }
 }
 
 .answerFooter {
@@ -115,14 +121,8 @@
     padding: 0;
     margin: 0;
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row wrap;
     gap: .5rem;
-}
-
-@media screen and (min-width:800px) {
-    .citationList {
-        flex-flow: row wrap;
-    } 
 }
 
 .citationList li {
